<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <LinearLayout 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="15dp"
       android:layout_gravity="center"
       android:orientation="horizontal" >
     
        <TextView 
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/regist"
      		android:textSize="20sp"
       />
     
    </LinearLayout>
    
    <LinearLayout 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="15dp"
       android:layout_marginLeft="15dp"
       android:layout_marginRight="15dp"
       android:orientation="horizontal" >
     
        <TextView 
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/username"
      		android:textSize="20sp"
       />
        <EditText 
            android:id="@+id/uname"
            android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
            />
     
    </LinearLayout>
    
    <LinearLayout 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="35dp"
       android:layout_marginRight="15dp"
       android:orientation="horizontal" >
     
        <TextView 
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/password"
      		android:textSize="20sp"
       />
        <EditText 
            android:id="@+id/pwd"
            android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
            />
     
    </LinearLayout>
    
    <LinearLayout 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_gravity="center"
       android:orientation="horizontal" >
     
        <Button 
            android:id="@+id/bt_regist"
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/registnow"/>
        <Button 
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/loginback"/>
     
    </LinearLayout>

</LinearLayout>
