<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<EditText
        android:id="@+id/myEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addnewtext" 
        />

<LinearLayout 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_gravity="center"
       android:orientation="horizontal" >
     
        <Button 
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/addnew"/>
        <Button 
            android:id="@+id/btn_f"
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/f"/>
     
    </LinearLayout>

    <ListView 
        android:id="@+id/myListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    /> 
</LinearLayout>
