<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<EditText
        android:id="@+id/myEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

<LinearLayout 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_gravity="center"
       android:orientation="horizontal" >
     
        <Button 
            android:id="@+id/btn_sure"
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/editsure"/>
        <Button 
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/delete"/>
     
    </LinearLayout>
    <LinearLayout 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_gravity="center" >

        <Button 
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/cancel" />
     
    </LinearLayout>
</LinearLayout>
